[package]
name = "dojo-orm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { git = "https://github.com/async-graphql/async-graphql", features = ["tokio", "chrono", "dataloader", "tracing", "uuid"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
postgres-types = { version = "0.2.6", features = ["derive", "with-serde_json-1"] }
postgres-openssl = "0.5.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
anyhow = "1.0.52"
thiserror = "1.0.52"
refinery = { version = "0.8.11", features = ["tokio-postgres"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4.19", features = ["serde"] }
bytes = "1.5.0"
async-trait = "0.1.75"
dojo-macros = { path = "../dojo-macros" }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.tokio-postgres]
version = "0.7.2"
features = [
    "with-chrono-0_4",
    "with-uuid-1",
    "array-impls"
]
